--- a/hrms-Saas/.env.example
+++ b/hrms-Saas/.env.example
@@ -5,10 +5,10 @@ PORT=5000
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=hrms_saas_db
+DB_NAME=hrms_saas_db_db
 DB_USER=hrms_user
 DB_PASSWORD=root
-DATABASE_URL=postgresql://hrms_user:root@localhost:5432/hrms_saas_db
+DATABASE_URL=postgresql://hrms_user:root@localhost:5432/hrms_saas_db_db
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
