--- a/hrms-Saas/docker-compose.yml
+++ b/hrms-Saas/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       POSTGRES_USER: hrms_user
       POSTGRES_PASSWORD: hrms_password
-      POSTGRES_DB: hrms_saas_db
+      POSTGRES_DB: hrms_saas_db_db
     ports:
       - "5432:5432"
     volumes:
@@ -36,7 +36,7 @@ services:
     networks:
       - hrms-net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U hrms_user -d hrms_saas_db"]
+      test: ["CMD-SHELL", "pg_isready -U hrms_user -d hrms_saas_db_db"]
       interval: 5s
       timeout: 5s
       retries: 10
